tests/fixtures/invalid/pow_list_set_int.py
# Cannot call pow() with List[int], Set[int], Int
x = pow([1, 2, 3], {1, 2, 3}, 1)
